[tool.poetry]
name = "apple-health-dashboard"
version = "0.1.0"
description = ""
authors = ["Takeshi \"Ken\" Tomaru <gh@tomarun.net>"]
readme = "README.md"
packages = [{include = "apple_health_dashboard", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.13.0"
dash-bootstrap-components = "^1.4.2"
lxml = "^4.9.3"
pandas = "~2.0.3"


[tool.poetry.group.dev.dependencies]
grip = "^4.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
